# pactown-debug

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  RAPORT.md  README.md  TODO.md  docker-compose.yml  log.json  output.py  package.json  playwright.config.ts  server.py
app/: index.html
e2e/: app.spec.ts
examples/: fix_summary.json
examples/ansible/: playbook.yml
examples/ansible/fixed/: playbook_log.json
examples/bash/: faulty.sh  fixed.sh  log.json
examples/bash/fixed/: faulty_log.json  fixed_faulty.sh  fixed_fixed.sh  fixed_log.json  log_log.json
examples/docker-compose/fixed/: docker-compose_log.json  fixed_docker-compose.yml
examples/dockerfile/: Dockerfile
examples/dockerfile/fixed/: Dockerfile_log.json  fixed_Dockerfile
examples/github-actions/: workflow.yml
examples/github-actions/fixed/: fixed_workflow.yml  workflow_log.json
examples/javascript/: faulty.js  fixed.js  log.json
examples/javascript/fixed/: faulty_log.json  fixed_faulty.js  fixed_fixed.js  fixed_log.json  log_log.json
examples/kubernetes/: deployment.yaml
examples/kubernetes/fixed/: deployment_log.json
examples/nginx/: nginx.conf
examples/nginx/fixed/: fixed_nginx.conf  nginx_log.json
examples/nodejs/: faulty.js  fixed.js  log.json
examples/nodejs/fixed/: faulty_log.json  fixed_faulty.js  fixed_fixed.js  fixed_log.json  log_log.json
examples/php/: faulty.php
examples/python/: faulty.py  log.json
examples/sql/: faulty.sql
examples/terraform/: main.tf
pactfix-py/: PLAN.md  PYPI.md  README.md  pyproject.toml  pytest.ini
pactfix-py/pactfix/: __init__.py  __main__.py  analyzer.py  cli.py  sandbox.py
pactfix-py/pactfix/analyzers/: __init__.py  apache.py  docker_compose.py  gitlab_ci.py  helm.py  jenkinsfile.py  kubernetes.py
pactfix-py/scripts/: test-sandboxes.sh
pactfix-py/test-projects/bash-project/: deploy.sh
pactfix-py/test-projects/bash-project/_fixtures/faulty/: deploy.sh
pactfix-py/test-projects/dockerfile-project/: Dockerfile  config.txt
pactfix-py/test-projects/dockerfile-project/_fixtures/faulty/: Dockerfile
pactfix-py/test-projects/gitlab-ci-project/_fixtures/faulty/: .gitlab-ci.yml
pactfix-py/test-projects/go-project/: main.go  main_test.go
pactfix-py/test-projects/go-project/_fixtures/faulty/: go.mod  main.go  main_test.go
pactfix-py/test-projects/helm-project/_fixtures/faulty/: Chart.yaml
pactfix-py/test-projects/helm-project/_fixtures/faulty/templates/: _helpers.tpl  deployment.yaml
pactfix-py/test-projects/jenkins-project/_fixtures/faulty/: Jenkinsfile
pactfix-py/test-projects/nodejs-project/: index.js
pactfix-py/test-projects/nodejs-project/_fixtures/faulty/: index.js  package.json
pactfix-py/test-projects/python-project/: main.py  test_main.py
pactfix-py/test-projects/python-project/_fixtures/faulty/: main.py  test_main.py
pactfix-py/tests/: test_cli.py  test_comprehensive.py  test_more_analyzers.py  test_report.json
pactfix-py/tests/fixtures/helm/: values.yaml
pactown-js/: README.md  package.json
pactown-js/src/: index.js
playwright-report/: index.html
test-results/: .last-run.json
tests/: test_e2e_live_debug.py
(+12 files in other folders)
