[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pactfix"
version = "1.0.0"
description = "Multi-language code and config file analyzer and fixer"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["linter", "code-analysis", "bash", "python", "php", "javascript"]


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
pactfix = "pactfix.cli:main"

[project.urls]
Homepage = "https://github.com/wronai/pactfix-debug"
Repository = "https://github.com/wronai/pactfix-debug"

[tool.setuptools.packages.find]
where = ["."]
