[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pactfix"
version = "1.0.3"
description = "🔧 Multi-language code analyzer and auto-fixer with Docker sandbox support"

[project.readme]
file = "PYPI.md"
content-type = "text/markdown"

license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Pactown Team", email = "team@pactown.dev"},
]
maintainers = [
    {name = "Pactown Team", email = "team@pactown.dev"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Environment :: Console",
]
keywords = ["linter", "code-analysis", "auto-fix", "bash", "python", "php", "javascript", "docker", "sql", "terraform", "kubernetes", "gitlab-ci", "jenkinsfile", "devops", "ci-cd"]
dependencies = [
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
pactfix = "pactfix.cli:main"

[project.urls]
Homepage = "https://pactown.dev"
Documentation = "https://github.com/wronai/pactown-debug/blob/main/pactfix-py/README.md"
Repository = "https://github.com/wronai/pactown-debug"
"Bug Tracker" = "https://github.com/wronai/pactown-debug/issues"
Changelog = "https://github.com/wronai/pactown-debug/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
